src/App.css
.app {
    display: grid;
    grid-template-rows: 60px 1fr;
    grid-template-columns: 200px 1fr;
    grid-template-areas:    "nav-bar nav-bar"
                            "side-bar week";
    height: 100vh;
    min-width: 0;
}

@media only screen and (max-width: 800px) {
    .app { grid-template-areas: "nav-bar nav-bar"
                                "week week"     ;}
}

.week{
    grid-area: week;
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    /* justify-items: stretch; */
    padding: calc(0.2vw + 2px) 5px;
    background-color: rgb(205, 208, 224);
    height: 100%;
    min-width: 0;
}

.day {
    background-color: white;
    padding: 2px Calc(1px + 0.05vw) ;
    border: gray 1px solid;
    height: 100%;
    /* margin: calc(0.1vw + 1px); */
    /* overflow: hidden; */ 
    min-width: 0;
}

.dayTitle{
    padding: 5px 5px 0px;
    color: teal;
    min-width: 0;
}

.task {
    overflow: hidden;
    display: grid;
    grid-template-columns: 66% 34%;
    grid-template-rows:  auto 1fr;
    grid-template-areas:    "task-title task-time"
                            "task-description task-description";
    background-color: rgb(65, 140, 238);
    margin: 5px 4px;
    padding: 10px 10px 1px;
    border-radius: 2px;
    min-width: 0;
    max-height: 6.4em;
}

#h5 .task {
    color: red;
}

.taskTitle {
    text-shadow: rgba(0, 0, 0, 0.055) 1px 1px 1px;
    overflow: hidden;                                                 /* !!!!! need to combine all of these!*/
    font-style: oblique;
    padding: 0em;
    margin: 0em;
    display: block;
    font-size: 1em;
    grid-area: task-title;
}

.task-time {
    text-shadow: rgba(0, 0, 0, 0.055) 1px 1px 1px;
    overflow: hidden;   
    font-style: oblique;
    padding: 0.05em 0.4em;
    margin: 0em;
    display: block;
    font-size: 0.8em;
    text-align: right;
    grid-area: task-time;
}

.task-description{
    grid-area: task-description;
    font-size: 0.8em;
    overflow: hidden;   
}

@media only screen and (max-width: 800px) {
    .task-description{ font-size: 0.7em;
                        }
    .task-time {display: none;}
    .taskTitle{
        font-size: 0.7em;
        font-style: normal;}
    /* .task{
        grid-template-areas:"text-title text-title"
                            "text-description text-description";} */
    .task {
        margin: 1px 0;
        padding: 0.4em 0.4em;
    }
}

@media only screen and (max-width: 1100px) {
    .task-time {
        display: none;
    }
}

.nav-bar {
    grid-area: nav-bar;
    width: 100%;
    background-color: brown;
    display: inline-block;
}

.side-bar {
    grid-area: side-bar;
    background-color: khaki;
}

